html/css modified

--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
         </div>
       </nav>
       <section class="content-body__content">
-        <div class="story-box"></div>
+        <div class="story-box">
+          <!-- 인스타 스토리 기능 구현 안함 -->
+        </div>
         <div class="content-box">
           <header class="content-box__top">
             <div class="user-info">
