--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
 <body>
   <!-- 
     TODO:
-    search_box, 이전 활동, 프로필 포커싱 시에 모달창
-    게시물 더보기 클릭 시 모달창(js로 구현)
+    -search_box, 이전 활동, 프로필 포커싱 시에 모달창
+    -검색창 포커스 시 placeholder보이기, 아이콘 사라지기(js 구현 혹은 리팩토링하면서 구현)
+    -게시물 더보기 클릭 시 모달창(js로 구현)
+    -게시물 이미지 슬라이더
+    -html/css 리팩토링
   -->
   <header id="header">
     <div class="container">
