add unfollow modal

--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@
               <span class="user__name">test1</span>
             </div>
             <span class="material-icons more">more_horiz</span>
+            <div class="modal-box content">
+              <div class="modal-bg"></div>
+              <div class="modal modal__unfollow">
+                
+              </div>
+            </div>
           </header>
           <section class="content-box__image"></section>
           <section class="content-box__description">
